# Axon

./: .clang-format  .gitignore  .secrets.baseline  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Earthfile  LICENSE  README.md  mkdocs.yml
src/archive/libraries/Axon0_network/src/: CMakeLists.txt  abstract_server.cpp  abstract_server.h  abstract_socket.cpp  abstract_socket.h  callbacks.h  message_definitions.h  multiblock_io.cpp  multiblock_io.h  session.cpp  session_controller.cpp  template_server.h  template_socket.h
src/archive/libraries/Axon0_obj/src/: CMakeLists.txt  obj_creator.cpp  obj_creator.h  obj_item.cpp  obj_parser.cpp  obj_parser.h
src/archive/libraries/Axon0_opencl/src/: CMakeLists.txt  gpu_data.cpp  gpu_handler.cpp  gpu_interface.cpp
src/libraries/: CMakeLists.txt
src/libraries/Axon0_args/: CMakeLists.txt
src/libraries/Axon0_args/include/Axon0_args/: arg_parser.h
src/libraries/Axon0_args/src/: CMakeLists.txt  arg_parser.cpp
src/libraries/Axon0_args/tests/cli_tests/: CMakeLists.txt  main.cpp
src/libraries/Axon0_args/tests/unit_tests/: CMakeLists.txt  arg_parser_test.cpp  arg_parser_test.h  main.cpp
src/libraries/Axon0_cluster_parser/: CMakeLists.txt
src/libraries/Axon0_cluster_parser/include/Axon0_cluster_parser/: cluster_meta.h
src/libraries/Axon0_cluster_parser/src/: cluster_meta.cpp
src/libraries/Axon0_cluster_parser/src/cluster_parsing/: cluster_parser_interface.cpp  cluster_parser_interface.h
src/libraries/Axon0_cluster_parser/src/grammar/: cluster_lexer.l  cluster_parser.y
src/libraries/Axon0_cluster_parser/tests/memory_leak_tests/: CMakeLists.txt  cluster_parsestring_test.cpp  cluster_parsestring_test.h  main.cpp
src/libraries/Axon0_cluster_parser/tests/unit_tests/: CMakeLists.txt  cluster_parsestring_test.cpp  cluster_parsestring_test.h
src/libraries/Axon0_common/: CHANGELOG_old  CMakeLists.txt
src/libraries/Axon0_common/include/Axon0_common/: defines.h  enums.h  logger.h  memory_counter.h  process_execution.h  progress_bar.h  statemachine.h  structs.h  upload_file_handle.h  uuid.h
src/libraries/Axon0_common/src/: logger.cpp  memory_counter.cpp  process_execution.cpp  progress_bar.cpp  state.h  statemachine.cpp  uuid.cpp
src/libraries/Axon0_common/src/buffer/: stack_buffer_reserve.cpp
src/libraries/Axon0_common/src/files/: binary_file.cpp  binary_file_direct.cpp  text_file.cpp
src/libraries/Axon0_common/src/functions/: file_functions.cpp  string_functions.cpp  vector_functions.cpp
src/libraries/Axon0_common/src/items/: table_item.cpp
src/libraries/Axon0_common/src/test_helper/: compare_test_helper.cpp  memory_leak_test_helper.cpp  speed_test_helper.cpp
src/libraries/Axon0_common/src/threading/: barrier.cpp  cleanup_thread.cpp  event.cpp  event_queue.cpp  thread.cpp  thread_handler.cpp
src/libraries/Axon0_common/tests/memory_leak_tests/: CMakeLists.txt  main.cpp
src/libraries/Axon0_common/tests/unit_tests/: CMakeLists.txt  main.cpp
src/libraries/Axon0_config/: CMakeLists.txt
src/libraries/Axon0_config/include/Axon0_config/: config_handler.h
src/libraries/Axon0_config/src/: CMakeLists.txt  config_handler.cpp
src/libraries/Axon0_config/tests/functional_tests/: CMakeLists.txt  config_handler_test.cpp  config_handler_test.h
src/libraries/Axon0_config/tests/unit_tests/: CMakeLists.txt  config_handler_test.cpp  config_handler_test.h  main.cpp
src/libraries/Axon0_cpu/: CMakeLists.txt
src/libraries/Axon0_cpu/include/Axon0_cpu/: cpu.h  memory.h  rapl.h
src/libraries/Axon0_cpu/src/: CMakeLists.txt  cpu.cpp  memory.cpp  rapl.cpp
src/libraries/Axon0_cpu/tests/cli_tests/: CMakeLists.txt  main.cpp
src/libraries/Axon0_crypto/: CMakeLists.txt
src/libraries/Axon0_crypto/include/Axon0_crypto/: common.h  hashes.h  signing.h  symmetric_encryption.h
src/libraries/Axon0_crypto/src/: common.cpp  hashes.cpp  symmetric_encryption.cpp
src/libraries/Axon0_crypto/tests/unit_tests/: CMakeLists.txt  common_test.cpp  common_test.h  hashes_test.cpp  hashes_test.h  main.cpp  symmetric_encryption_test.cpp  symmetric_encryption_test.h
src/libraries/Axon0_database/: CMakeLists.txt
src/libraries/Axon0_database/include/Axon0_database/: sql_database.h  sql_table.h
src/libraries/Axon0_database/src/: CMakeLists.txt  sql_database.cpp  sql_table.cpp
src/libraries/Axon0_database/tests/functional_tests/: CMakeLists.txt  main.cpp  sql_table_test.cpp  sql_table_test.h  test_table.cpp  test_table.h
src/libraries/Axon0_hardware/: CMakeLists.txt
src/libraries/Axon0_hardware/include/Axon0_hardware/: cpu_core.h  cpu_package.h  cpu_thread.h  host.h  power_measuring.h  speed_measuring.h  temperature_measuring.h  value_container.h
src/libraries/Axon0_hardware/src/: CMakeLists.txt  cpu_core.cpp  cpu_package.cpp  cpu_thread.cpp  host.cpp  power_measuring.cpp  speed_measuring.cpp  temperature_measuring.cpp  value_container.cpp
src/libraries/Axon0_hardware/tests/unit_tests/: CMakeLists.txt
src/libraries/Axon0_ini/: CMakeLists.txt
src/libraries/Axon0_ini/include/Axon0_ini/: ini_item.h
src/libraries/Axon0_ini/src/: CMakeLists.txt  ini_item.cpp
src/libraries/Axon0_ini/src/grammar/: ini_lexer.l  ini_parser.y
src/libraries/Axon0_ini/src/ini_parsing/: ini_parser_interface.cpp  ini_parser_interface.h
src/libraries/Axon0_ini/tests/unit_tests/: CMakeLists.txt  main.cpp
src/libraries/Axon0_messages/protobuffers/: Axon0_messages.proto3
src/libraries/Axon0_policies/: CMakeLists.txt
src/libraries/Axon0_policies/include/Axon0_policies/: policy.h
src/libraries/Axon0_policies/src/: policy.cpp
src/libraries/Axon0_policies/src/grammar/: policy_lexer.l  policy_parser.y
src/libraries/Axon0_policies/src/policy_parsing/: policy_parser_interface.cpp  policy_parser_interface.h
src/libraries/Axon0_policies/tests/unit_tests/: CMakeLists.txt  main.cpp  policy_test.cpp  policy_test.h
src/libraries/Axon0_sqlite/: CMakeLists.txt
src/libraries/Axon0_sqlite/include/Axon0_sqlite/: sqlite.h
src/libraries/Axon0_sqlite/src/: CMakeLists.txt  sqlite.cpp
src/libraries/Axon0_sqlite/tests/unit_tests/: CMakeLists.txt  (+3 more)
(+567 files in other folders)
